# hudhud-restriction-validator

./: .env.example  .gitignore  CODE_REVIEW.md  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-push.yml  ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  ruff.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py  routes.py
backend/app/services/: cache.py  overpass.py
backend/app/validation/: __init__.py  engine.py  models.py
backend/app/validation/rules/: __init__.py  base.py  member_rules.py  type_rules.py  warning_rules.py
backend/tests/: test_api.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/Controls/: FilterPanel.tsx  LayerControl.tsx  SearchBox.tsx
frontend/src/components/Map/: MapContainer.tsx  MarkerCluster.tsx  RestrictionMarker.tsx  RestrictionPopup.tsx
frontend/src/components/UI/: ErrorBanner.tsx  HelpModal.tsx  LoadingOverlay.tsx
frontend/src/config/: tiles.ts
frontend/src/hooks/: useDebounce.ts  useRestrictions.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts  leaflet.markercluster.d.ts
